[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/ingame/stage/minigame3/TresAnim/CensSetsGood_right.tres" type="Animation" id=1]
[ext_resource path="res://assets/art/ingame/stage/minigame 3/setas/dir.png" type="Texture" id=2]
[ext_resource path="res://src/ingame/stage/minigame3/ScripsGm3/stoppedarrow_right.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 9 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Stop_right_Good:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="stoppedarrow_right" type="Area2D"]
script = ExtResource( 3 )

[node name="Stop_right_Colision" type="CollisionShape2D" parent="."]
position = Vector2( 2, 0 )
shape = SubResource( 1 )

[node name="Stop_right_Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 3

[node name="Stop_right_Good" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 2 )
hframes = 3
frame = 2

[node name="Stop_right_Bad" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )
hframes = 3

[node name="Stop_right_Anim" type="AnimationPlayer" parent="."]
anims/Good_right = ExtResource( 1 )
anims/RESET = SubResource( 2 )

[connection signal="area_shape_entered" from="." to="." method="_on_stoppedarrow_right_area_shape_entered"]
[connection signal="area_shape_exited" from="." to="." method="_on_stoppedarrow_right_area_shape_exited"]
